Fix incorrect icon alignment in the selection box when MP6 admin UI is active.
git-svn-id: https://plugins.svn.wordpress.org/admin-menu-editor/branches/transitory@701490 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/menu-editor.css
+++ b/css/menu-editor.css
@@ -529,6 +529,16 @@ a.ws_button:hover {
 	height: 16px;
 }
 
+/* MP6 admin style compatibility */
+#ws_icon_selector .ws_icon_option .icon16::before {
+    margin: 0;
+    padding: 0;
+}
+.ws_select_icon .icon16::before {
+    padding: 0;
+    margin: 1px 0 0 2px;
+}
+
 #ws_choose_icon_from_media {
 	margin: 2px;
 }
